--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,13 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+It should be pretty simple and obvious on how to install and run it.
+once you git clone it, you just need to: 
 
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+bundle install
+rake db:create
+rake db:migrate
 
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+I made a quick and easy task to bulk add orders too: with the number passed in as the number of random orders you want created.
+
+rake orders:bulk_add[5]
